force-app/main/default/objects/VHF_Setting__mdt/VHF_Setting__mdt.object-meta.xml
<CustomObject>
    <label>VHF Setting</label>
    <pluralLabel>VHF Settings</pluralLabel>
</CustomObject>