force-app/main/default/objects/VHF_Setting__mdt/fields/Biller_Code__c.field-meta.xml
<CustomField>
    <fullName>Biller_Code__c</fullName>
    <label>Biller Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>