force-app/main/default/objects/VHF_Setting__mdt/fields/Internal_Group_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Group_Email__c</fullName>
    <description>Normally should be homebuyer@sro.vic.gov.au but can be reconfigured to individual emails for testing purposes</description>
    <label>Internal Group Email</label>
    <type>Email</type>
</CustomField>