force-app/main/default/objects/VHF_Setting__mdt/fields/Lender_Intro_Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Lender_Intro_Video_Id__c</fullName>
    <description>The Youtube Video Id of the Lender Intro Video. Used as a reference in VideoPlayer component and help link on the lender portal</description>
    <label>Lender Intro Video Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>