force-app/main/default/objects/VHF_Setting__mdt/fields/Salesforce_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Admin_Email__c</fullName>
    <description>Normally should be salesforce.admin@sro.vic.gov.au but can be reconfigured to individual emails for testing purposes</description>
    <label>Salesforce Admin Email</label>
    <type>Email</type>
</CustomField>